// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link.md with options: {"type":{"link":false}}: link.md 1`] = `
[说明a说明1](http://example.com/链接a链接1 "标题a标题1")

[说明b说明2](http://example.com/链接b链接2)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[说明 a 说明 1](http://example.com/链接a链接1 "标题a标题1")

[说明 b 说明 2](http://example.com/链接b链接2)

`;

exports[`link.md with options: undefined: link.md 1`] = `
[说明a说明1](http://example.com/链接a链接1 "标题a标题1")

[说明b说明2](http://example.com/链接b链接2)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[说明 a 说明 1](http://example.com/链接a链接1 "标题 a 标题 1")

[说明 b 说明 2](http://example.com/链接b链接2)

`;
